--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,6 +7,7 @@ phases:
       - touch file01.zip
       - touch file02.zip
       - touch file03.zip
+      - touch file04.zip
       - ls -la /codebuild
   post_build:
     commands:
